# kitti_scripts

./: .gitignore  README.md
devkit/: kitti_relabel.py  kitti_resize.py  random_val.sh
odometry/devkit/: CMakeLists.txt
odometry/devkit/cpp/: evaluate_odometry.cpp
odometry/devkit/include/: matrix.h  matrix.hpp
odometry/devkit/src/: evaluate_odometry.cpp  matrix.cpp
pose_utilities/: .gitignore  CMakeLists.txt
pose_utilities/src/: convert_moose_poses_to_kitti.cpp
